feat(storage): SectionStore interface + FilesystemStorage fallback — LMDB used when available, filesystem on JDK module lockdown